--- a/HKUser/my_case_history/case_detail.html
+++ b/HKUser/my_case_history/case_detail.html
@@ -21,7 +21,7 @@
 		</header>
 		<div class="mui-content">
 			<div class="case-item" id="case-item">
-				<div class="case-info"><div class="caseName" id="illName"></div><div class="sex">性别：<span id="sex"></span></div><div class="age">年龄：<span id="age"></span></div></div>
+				<div class="case-info"><div class="mui-ellipsis caseName" id="illName"></div><div class="sex">性别：<span id="sex"></span></div><div class="age">年龄：<span id="age"></span></div></div>
 				<div class="case-detail">
 					<div class="case-detail-item"><div class="detail-title">就诊人：</div><span id="realName"></span></div>
 					<div class="case-detail-item"><div class="detail-title">过敏史：</div><span id="allergyHistory"></span></div>
