--- a/HKUser/my_case_history/case_list.html
+++ b/HKUser/my_case_history/case_list.html
@@ -95,7 +95,7 @@
 					}else if(obj.stages == 0){
 						stageType = "无";
 					}
-					div.innerHTML = "<div class='case-item'><div class='case-info'><div class='caseName'>"+obj.illName+"</div><div class='sex'><span class='case-title'>性别：</span>"+(obj.sex == 1?'男':'女')+"</div><div class='age'><span class='case-title'>年龄：</span>"+obj.age+"</div></div>"+
+					div.innerHTML = "<div class='case-item'><div class='case-info'><div class='mui-ellipsis caseName'>"+obj.illName+"</div><div class='sex'><span class='case-title'>性别：</span>"+(obj.sex == 1?'男':'女')+"</div><div class='age'><span class='case-title'>年龄：</span>"+obj.age+"</div></div>"+
 									"<div class='case-detail'>"+
 									"<div class='case-detail-item'><div class='detail-title'>就诊人：</div>"+obj.realname+"</div>"+
 									"<div class='case-detail-item'><div class='detail-title'>过敏史：</div>"+obj.allergyHistory+"</div>"+
